<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/blank3"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginTop="12dp"
        android:id="@+id/blank4"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:id="@+id/blank5"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_start_game"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_nice_btn"
                android:textColor="@drawable/selector_font_color"
                android:text="@string/start_game" />

            <Button
                android:id="@+id/btn_astar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:textColor="@drawable/selector_font_color"
                android:background="@drawable/selector_nice_btn"
                android:text="@string/start_astar" />

            <Button
                android:id="@+id/btn_game_set"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/selector_nice_btn"
                android:textColor="@drawable/selector_font_color"
                android:text="@string/game_set" />

            <Button
                android:id="@+id/btn_score_list"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/selector_nice_btn"
                android:textColor="@drawable/selector_font_color"
                android:text="@string/score_list" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/blank1"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blank2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

    </LinearLayout>

</LinearLayout>
