<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/title2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_edge"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sound_switch"
            android:textColor="#22B14C" />

        <ToggleButton
            android:id="@+id/tbtnSoundSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_butn_toggle"
            android:checked="true" 
            android:textOn="" 
            android:textOff="" 
			android:text="" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/music_switch"
            android:textColor="#22B14C" />

        <ToggleButton
            android:id="@+id/tbtnMusicSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_butn_toggle"
            android:checked="true" 
            android:textOn="" 
            android:textOff="" 
			android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_edge"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ai_level"
            android:textColor="#22B14C" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" >

            <Spinner
                android:id="@+id/spAiLevel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/black_edge" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_edge" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ai_speed"
            android:textColor="#22B14C" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" >

            <Spinner
                android:id="@+id/spAiSpeed"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/black_edge" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_edge" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/game_level"
            android:textColor="#22B14C" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" >

            <Spinner
                android:id="@+id/spGameLevel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/black_edge" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>